--- a/userPreset.html
+++ b/userPreset.html
@@ -79,8 +79,8 @@
                             <div class="info-item-input">
                               <div class="info-label-wrap">
                                 <label class="info-label label-search-word">
-                                  <input type="text" class="info-input input-search-word" placeholder="" readonly>
-                                  <span class="search-word-value">베개</span>
+                                  <input type="text" class="info-input input-search-word" placeholder="베개" readonly>
+                                  <!-- <span class="search-word-value">베개</span> -->
                                 </label>
                               </div>
                             </div>
@@ -343,8 +343,8 @@
                             <div class="info-item-input">
                               <div class="info-label-wrap">
                                 <label class="info-label label-search-word">
-                                  <input type="text" class="info-input input-search-word" placeholder="" readonly>
-                                  <span class="search-word-value">베개</span>
+                                  <input type="text" class="info-input input-search-word" placeholder="베개" readonly>
+                                  <!-- <span class="search-word-value">베개</span> -->
                                 </label>
                               </div>
                             </div>
@@ -607,8 +607,8 @@
                             <div class="info-item-input">
                               <div class="info-label-wrap">
                                 <label class="info-label label-search-word">
-                                  <input type="text" class="info-input input-search-word" placeholder="" readonly>
-                                  <span class="search-word-value">베개</span>
+                                  <input type="text" class="info-input input-search-word" placeholder="베개" readonly>
+                                  <!-- <span class="search-word-value">베개</span> -->
                                 </label>
                               </div>
                             </div>
@@ -871,8 +871,8 @@
                             <div class="info-item-input">
                               <div class="info-label-wrap">
                                 <label class="info-label label-search-word">
-                                  <input type="text" class="info-input input-search-word" placeholder="" readonly>
-                                  <span class="search-word-value">베개</span>
+                                  <input type="text" class="info-input input-search-word" placeholder="베개" readonly>
+                                  <!-- <span class="search-word-value">베개</span> -->
                                 </label>
                               </div>
                             </div>
@@ -1135,8 +1135,8 @@
                             <div class="info-item-input">
                               <div class="info-label-wrap">
                                 <label class="info-label label-search-word">
-                                  <input type="text" class="info-input input-search-word" placeholder="" readonly>
-                                  <span class="search-word-value">베개</span>
+                                  <input type="text" class="info-input input-search-word" placeholder="베개" readonly>
+                                  <!-- <span class="search-word-value">베개</span> -->
                                 </label>
                               </div>
                             </div>
@@ -1421,8 +1421,8 @@
                             <div class="info-item-input">
                               <div class="info-label-wrap">
                                 <label class="info-label label-search-word">
-                                  <input type="text" class="info-input input-search-word" placeholder="" readonly>
-                                  <span class="search-word-value">베개</span>
+                                  <input type="text" class="info-input input-search-word" placeholder="베개" readonly>
+                                  <!-- <span class="search-word-value">베개</span> -->
                                 </label>
                               </div>
                             </div>
@@ -1743,8 +1743,8 @@
                             <div class="info-item-input">
                               <div class="info-label-wrap">
                                 <label class="info-label label-search-word">
-                                  <input type="text" class="info-input input-search-word" placeholder="" readonly>
-                                  <span class="search-word-value">베개</span>
+                                  <input type="text" class="info-input input-search-word" placeholder="베개" readonly>
+                                  <!-- <span class="search-word-value">베개</span> -->
                                 </label>
                               </div>
                             </div>
@@ -2065,8 +2065,8 @@
                             <div class="info-item-input">
                               <div class="info-label-wrap">
                                 <label class="info-label label-search-word">
-                                  <input type="text" class="info-input input-search-word" placeholder="" readonly>
-                                  <span class="search-word-value">베개</span>
+                                  <input type="text" class="info-input input-search-word" placeholder="베개" readonly>
+                                  <!-- <span class="search-word-value">베개</span> -->
                                 </label>
                               </div>
                             </div>
@@ -2387,8 +2387,8 @@
                             <div class="info-item-input">
                               <div class="info-label-wrap">
                                 <label class="info-label label-search-word">
-                                  <input type="text" class="info-input input-search-word" placeholder="" readonly>
-                                  <span class="search-word-value">베개</span>
+                                  <input type="text" class="info-input input-search-word" placeholder="베개" readonly>
+                                  <!-- <span class="search-word-value">베개</span> -->
                                 </label>
                               </div>
                             </div>
@@ -2709,8 +2709,8 @@
                             <div class="info-item-input">
                               <div class="info-label-wrap">
                                 <label class="info-label label-search-word">
-                                  <input type="text" class="info-input input-search-word" placeholder="" readonly>
-                                  <span class="search-word-value">베개</span>
+                                  <input type="text" class="info-input input-search-word" placeholder="베개" readonly>
+                                  <!-- <span class="search-word-value">베개</span> -->
                                 </label>
                               </div>
                             </div>
