--- a/index_login.html
+++ b/index_login.html
@@ -39,11 +39,11 @@
             </div>
 
             <div class="intro-login">
-              <button id="introLogin" class="login-btn now-on">로그인</button>
-              <button id="introLogout" class="logout-btn">로그아웃</button>
+              <button id="introLogin" class="login-btn">로그인</button>
+              <button id="introLogout" class="logout-btn now-on"><a href="./index.html">로그아웃</a></button>
             </div>
 
-            <div class="user-area">
+            <div class="user-area now-on">
               <a href="./userPreset.html" class="link-area">
                 <p class="user-profile"></p>
                 <span class="user-name">야무진진눈깨비</span>
