--- a/now.html
+++ b/now.html
@@ -110,55 +110,6 @@
         </div>
       </section>
 
-      <!-- section class="content-section">
-        <div class="section-inner">
-          <article class="content-article article-engagement">
-            <div class="article-inner">
-              <div class="article-title">
-                <h3 class="add-icon">ENGAGEMENT</h3>
-              </div>
-              <div class="article-content">
-                <div class="article-chart-wrap main-chart-wrap">
-                  <div class="chart-sample chart-area">
-                    <div class="chart-pie">
-                      <div class="value-engagement">
-                        <div class="item-color cht-grey"></div>
-                        <h4 class="item-title">ENGAGEMENT</h4>
-                        <p class="item-num">150,329</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="chart-info-area">
-                    <ul class="chart-info-list">
-                      <li class="info-item info-views">
-                        <div class="item-color cht-gr"></div>
-                        <h4 class="item-title">VIEWS</h4>
-                        <p class="item-num">120,000</p>
-                      </li>
-                      <li class="info-item info-comments">
-                        <div class="item-color cht-bl"></div>
-                        <h4 class="item-title">COMMENTS</h4>
-                        <p class="item-num">20,000</p>
-                      </li>
-                      <li class="info-item info-likes">
-                        <div class="item-color cht-yl"></div>
-                        <h4 class="item-title">LIKES</h4>
-                        <p class="item-num">9,872</p>
-                      </li>
-                      <li class="info-item info-shares">
-                        <div class="item-color cht-or"></div>
-                        <h4 class="item-title">SHARES</h4>
-                        <p class="item-num">457</p>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </article>
-        </div>
-      </section -->
-
       <section class="content-section pc-section">
         <div class="section-inner">
           <article class="content-article article-channel-details">
@@ -301,8 +252,8 @@
                         <li class="detail-subs subs-engagement">307.2</li>
                         <li class="detail-subs subs-comments">17,115</li>
                         <li class="detail-subs subs-views">17,115</li>
-                        <li class="detail-subs subs-likes">17,115</li>
-                        <li class="detail-subs subs-shares">17,115</li>
+                        <li class="detail-subs subs-likes">-</li>
+                        <li class="detail-subs subs-shares">-</li>
                       </ul>
                       <ul class="item-sub-list channel-subs-list">
                         <li class="detail-subs subs-channel">뽐뿌</li>
@@ -454,7 +405,7 @@
                         <li class="detail-subs subs-comments">17,115</li>
                         <li class="detail-subs subs-views">17,115</li>
                         <li class="detail-subs subs-likes">17,115</li>
-                        <li class="detail-subs subs-shares">17,115</li>
+                        <li class="detail-subs subs-shares">-</li>
                       </ul>
                       <ul class="item-sub-list channel-subs-list">
                         <li class="detail-subs subs-channel">네이버</li>
@@ -567,8 +518,8 @@
                         <li class="detail-subs subs-engagement">307.2</li>
                         <li class="detail-subs subs-comments">17,115</li>
                         <li class="detail-subs subs-views">17,115</li>
-                        <li class="detail-subs subs-likes">17,115</li>
-                        <li class="detail-subs subs-shares">17,115</li>
+                        <li class="detail-subs subs-likes">-</li>
+                        <li class="detail-subs subs-shares">-</li>
                       </ul>
                     </li>
                   </ul>
