--- a/footer.html
+++ b/footer.html
@@ -405,7 +405,7 @@
                   </div>
                   <div class="btn-wrap">
                     <div id="loginClsBtn" class="cancel-btn"><a href="#" class='btn'>닫기</a></div>
-                    <div id="loginBtn"><a href="#" class='btn'>로그인</a></div>
+                    <div id="loginBtn"><a href="./index_login.html" class='btn' target="_blank">로그인</a></div>
                   </div>
                 </fieldset>
               </form>
