--- a/header.html
+++ b/header.html
@@ -2,10 +2,7 @@
   <div class="header-inner">
     <h1 class="logo"><a href="index.html"><img src="./src/img/common/logo.svg" alt="buzzOn logo"></a></h1>
     <div class="mobile-menu-btn">
-      <!-- <p class="menu-line line-1"></p>
-        <p class="menu-line line-2"></p>
-        <p class="menu-line line-3"></p> -->
-      <a href="#" class="link-area">
+      <a href="./userPreset.html" class="link-area">
         <p class="menu-line line-1"></p>
         <p class="menu-line line-2"></p>
         <p class="menu-line line-3"></p>
