--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     </div>
 
     <div id="main" class="intro-page">
-      <div class="extra-key" style="position:fixed;top:10px;left:10px"><a href="./index_old.html">이전 페이지</a></div>
       <section class="intro-section">
         <div class="section-inner">
           <div class="section-content">
@@ -43,24 +42,12 @@
               <button id="introLogout" class="logout-btn">로그아웃</button>
             </div>
 
+            <!-- 로그인 후 addClass .now-on으로 활성화 -->
             <div class="user-area">
               <a href="./userPreset.html" class="link-area">
                 <p class="user-profile"></p>
                 <span class="user-name">야무진진눈깨비</span>
               </a>
-            </div>
-
-            <div class="intro-login-option clearFix">
-              <!-- <p class="id-remember">
-                <input id="idRemember" type="checkbox">
-                <label for="idRemember">아이디 기억하기</label>
-              </p> -->
-              <!-- <p class="find-user-info">
-                <a href="#">아이디/비밀번호 찾기</a>
-              </p>
-              <p class="join-us">
-                <a id="joinUs" href="#">회원가입</a>
-              </p> -->
             </div>
           </div>
         </div>
