--- a/userPreset.html
+++ b/userPreset.html
@@ -42,11 +42,11 @@
                         <!-- 이하 input들 수정모드 >> readnoly = false; -->
                         <!-- but! input checkbox는 onclick="return false"로 대체 -->
                         <div class="set-btn-wrap">
-                          <p class="modify-btn">수정</p>
-                          <p class="search-btn">검색</p>
-                          <p class="save-btn">저장</p>
-                          <p class="del-btn">삭제</p>
-                          <p class="cls-btn">취소</p>
+                          <p class="set-btn modify-btn"><span>수정</span></p>
+                          <p class="set-btn search-btn"><span>검색</span></p>
+                          <p class="set-btn save-btn"><span>저장</span></p>
+                          <p class="set-btn del-btn"><span>삭제</span></p>
+                          <p class="set-btn cls-btn"><span>취소</span></p>
                         </div>
                         <ul class="set-info-wrap">
                           <li class="set-info-item info-search-word">
@@ -368,11 +368,11 @@
                         <!-- 이하 input들 수정모드 >> readnoly = false; -->
                         <!-- but! input checkbox는 onclick="return false"로 대체 -->
                         <div class="set-btn-wrap">
-                          <p class="modify-btn">수정</p>
-                          <p class="search-btn">검색</p>
-                          <p class="save-btn">저장</p>
-                          <p class="del-btn">삭제</p>
-                          <p class="cls-btn">취소</p>
+                          <p class="set-btn modify-btn"><span>수정</span></p>
+                          <p class="set-btn search-btn"><span>검색</span></p>
+                          <p class="set-btn save-btn"><span>저장</span></p>
+                          <p class="set-btn del-btn"><span>삭제</span></p>
+                          <p class="set-btn cls-btn"><span>취소</span></p>
                         </div>
                         <ul class="set-info-wrap">
                           <li class="set-info-item info-search-word">
@@ -694,11 +694,11 @@
                         <!-- 이하 input들 수정모드 >> readnoly = false; -->
                         <!-- but! input checkbox는 onclick="return false"로 대체 -->
                         <div class="set-btn-wrap">
-                          <p class="modify-btn">수정</p>
-                          <p class="search-btn">검색</p>
-                          <p class="save-btn">저장</p>
-                          <p class="del-btn">삭제</p>
-                          <p class="cls-btn">취소</p>
+                          <p class="set-btn modify-btn"><span>수정</span></p>
+                          <p class="set-btn search-btn"><span>검색</span></p>
+                          <p class="set-btn save-btn"><span>저장</span></p>
+                          <p class="set-btn del-btn"><span>삭제</span></p>
+                          <p class="set-btn cls-btn"><span>취소</span></p>
                         </div>
                         <ul class="set-info-wrap">
                           <li class="set-info-item info-search-word">
@@ -1020,11 +1020,11 @@
                         <!-- 이하 input들 수정모드 >> readnoly = false; -->
                         <!-- but! input checkbox는 onclick="return false"로 대체 -->
                         <div class="set-btn-wrap">
-                          <p class="modify-btn">수정</p>
-                          <p class="search-btn">검색</p>
-                          <p class="save-btn">저장</p>
-                          <p class="del-btn">삭제</p>
-                          <p class="cls-btn">취소</p>
+                          <p class="set-btn modify-btn"><span>수정</span></p>
+                          <p class="set-btn search-btn"><span>검색</span></p>
+                          <p class="set-btn save-btn"><span>저장</span></p>
+                          <p class="set-btn del-btn"><span>삭제</span></p>
+                          <p class="set-btn cls-btn"><span>취소</span></p>
                         </div>
                         <ul class="set-info-wrap">
                           <li class="set-info-item info-search-word">
@@ -1346,11 +1346,11 @@
                         <!-- 이하 input들 수정모드 >> readnoly = false; -->
                         <!-- but! input checkbox는 onclick="return false"로 대체 -->
                         <div class="set-btn-wrap">
-                          <p class="modify-btn">수정</p>
-                          <p class="search-btn">검색</p>
-                          <p class="save-btn">저장</p>
-                          <p class="del-btn">삭제</p>
-                          <p class="cls-btn">취소</p>
+                          <p class="set-btn modify-btn"><span>수정</span></p>
+                          <p class="set-btn search-btn"><span>검색</span></p>
+                          <p class="set-btn save-btn"><span>저장</span></p>
+                          <p class="set-btn del-btn"><span>삭제</span></p>
+                          <p class="set-btn cls-btn"><span>취소</span></p>
                         </div>
                         <ul class="set-info-wrap">
                           <li class="set-info-item info-search-word">
