--- a/userPreset.html
+++ b/userPreset.html
@@ -1300,12 +1300,12 @@
                                     <p class="add-btn">+</p>
                                   </div>
                                 </div>
-                                <div class="include-word add-word">
+                                <div class="include-word add-word added">
                                   <!-- 추가할 수 있는 입력창은 .include-word에 .added 없음. -->
                                   <!-- 저장된 단어가 3개일 경우 노출되지 않음 -->
                                   <div class="add-option">
                                     <label class="add-option-label add-or-label">
-                                      <input type="radio" name="addOption503" value="include-or">
+                                      <input type="radio" name="addOption503" value="include-or" checked>
                                       <span class="label-txt">또는</span>
                                     </label>
                                     <label class="add-option-label add-and-label">
@@ -1314,7 +1314,7 @@
                                     </label>
                                   </div>
                                   <div class="add-input">
-                                    <input type="text" placeholder="포함어를 입력하세요.">
+                                    <input type="text" placeholder="황용섭">
                                     <p class="add-btn">+</p>
                                   </div>
                                 </div>
