--- a/userPreset.html
+++ b/userPreset.html
@@ -81,7 +81,7 @@
                                     </label>
                                   </div>
                                   <div class="add-input">
-                                    <input type="text" placeholder="담요">
+                                    <input type="text" placeholder="담요" readonly>
                                     <p class="add-btn">+</p>
                                   </div>
                                 </div>
@@ -97,7 +97,7 @@
                                     </label>
                                   </div>
                                   <div class="add-input">
-                                    <input type="text" placeholder="이불">
+                                    <input type="text" placeholder="이불" readonly>
                                     <p class="add-btn">+</p>
                                   </div>
                                 </div>
@@ -142,7 +142,7 @@
                                     </label>
                                   </div>
                                   <div class="add-input">
-                                    <input type="text" placeholder="나라">
+                                    <input type="text" placeholder="나라" readonly>
                                     <p class="add-btn">+</p>
                                   </div>
                                 </div>
@@ -158,7 +158,7 @@
                                     </label>
                                   </div>
                                   <div class="add-input">
-                                    <input type="text" placeholder="비누방울">
+                                    <input type="text" placeholder="비누방울" readonly>
                                     <p class="add-btn">+</p>
                                   </div>
                                 </div>
@@ -174,7 +174,7 @@
                                     </label>
                                   </div>
                                   <div class="add-input">
-                                    <input type="text" placeholder="피카츄">
+                                    <input type="text" placeholder="피카츄" readonly>
                                     <p class="add-btn">+</p>
                                   </div>
                                 </div>
@@ -413,7 +413,7 @@
                                     </label>
                                   </div>
                                   <div class="add-input">
-                                    <input type="text" placeholder="아이패드">
+                                    <input type="text" placeholder="아이패드" readonly>
                                     <p class="add-btn">+</p>
                                   </div>
                                 </div>
@@ -963,7 +963,7 @@
                                     </label>
                                   </div>
                                   <div class="add-input">
-                                    <input type="text" placeholder="보안사고">
+                                    <input type="text" placeholder="보안사고" readonly>
                                     <p class="add-btn">+</p>
                                   </div>
                                 </div>
@@ -980,7 +980,7 @@
                                     </label>
                                   </div>
                                   <div class="add-input">
-                                    <input type="text" placeholder="조흥은행">
+                                    <input type="text" placeholder="조흥은행" readonly>
                                     <p class="add-btn">+</p>
                                   </div>
                                 </div>
@@ -1025,7 +1025,7 @@
                                     </label>
                                   </div>
                                   <div class="add-input">
-                                    <input type="text" placeholder="이벤트">
+                                    <input type="text" placeholder="이벤트" readonly>
                                     <p class="add-btn">+</p>
                                   </div>
                                 </div>
@@ -1280,7 +1280,7 @@
                                     </label>
                                   </div>
                                   <div class="add-input">
-                                    <input type="text" placeholder="스위치">
+                                    <input type="text" placeholder="스위치" readonly>
                                     <p class="add-btn">+</p>
                                   </div>
                                 </div>
@@ -1296,7 +1296,7 @@
                                     </label>
                                   </div>
                                   <div class="add-input">
-                                    <input type="text" placeholder="스팀덱">
+                                    <input type="text" placeholder="스팀덱" readonly>
                                     <p class="add-btn">+</p>
                                   </div>
                                 </div>
@@ -1314,7 +1314,7 @@
                                     </label>
                                   </div>
                                   <div class="add-input">
-                                    <input type="text" placeholder="황용섭">
+                                    <input type="text" placeholder="황용섭" readonly>
                                     <p class="add-btn">+</p>
                                   </div>
                                 </div>
@@ -1341,7 +1341,7 @@
                                     </label>
                                   </div>
                                   <div class="add-input">
-                                    <input type="text" placeholder="컬러스케일">
+                                    <input type="text" placeholder="컬러스케일" readonly>
                                     <p class="add-btn">+</p>
                                   </div>
                                 </div>
@@ -1357,7 +1357,7 @@
                                     </label>
                                   </div>
                                   <div class="add-input">
-                                    <input type="text" placeholder="언더케이지">
+                                    <input type="text" placeholder="언더케이지" readonly>
                                     <p class="add-btn">+</p>
                                   </div>
                                 </div>
