--- a/userPreset.html
+++ b/userPreset.html
@@ -19,11 +19,53 @@
 
 <body>
   <div id="wrap" class="user-page usePreset-page">
+    <!-- <div id="headerNav" class="contents-page"> -->
     <div id="header" class="contents-page">
 
     </div>
 
     <div id="main" class="contents-page">
+
+      <section class="tab-section">
+        <div class="section-inner">
+          <article class="tab-article ">
+            <div class="article-inner">
+              <div class="tab-wrap">
+                <ul class="tab-list">
+                  <li class="tab-item tab-now"><a href="./now.html">NOW</a></li>
+                  <li class="tab-item tab-trend"><a href="./trend.html">TREND</a></li>
+                  <li class="tab-item tab-hottest"><a href="./hottest.html">HOTTEST</a></li>
+                </ul>
+                <ul class="tab-info-list">
+                  <li class="tab-info-item tab-now now-on">
+                    검색하신 키워드의 <em class="txt-highlight">관심도와 평판,</em> <em class="txt-highlight">연관 단어</em>를
+                    한눈에 알아볼 수 있습니다.
+                  </li>
+                  <li class="tab-info-item tab-trend">
+                    검색하신 키워드의 <em class="txt-highlight">관심도와 평판</em>이 시간의 흐름에 따라 <br><em class="txt-highlight">변화되는
+                      과정</em>을 확인할 수 있습니다.
+                  </li>
+                  <li class="tab-info-item tab-hottest">
+                    검색하신 키워트에 큰 영향을 미치는 <em class="txt-highlight">카페와 인플루언서, </em><br><em class="txt-highlight">화제가 된
+                      게시글</em>을 확인할 수 있습니다.
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </article>
+
+          <article class="content-article tab-title-article width-2-1 fl-r">
+            <div class="article-inner">
+              <div class="article-content">
+                <p class="tab-title">
+                  키워드 <strong class="txt-highlight">"베개"</strong>와 관련된 포스트를 <strong
+                    class="txt-num txt-highlight">30,000</strong>건 발견하였습니다.
+                </p>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
 
       <section class="content-section">
         <div class="section-inner">
