--- a/trend.html
+++ b/trend.html
@@ -36,6 +36,7 @@
                   <li class="tab-item tab-now"><a href="./now.html">NOW</a></li>
                   <li class="tab-item tab-trend now-on"><a href="./trend.html">TREND</a></li>
                   <li class="tab-item tab-hottest"><a href="./hottest.html">HOTTEST</a></li>
+                  <li class="tab-item tab-preset"><a href="./userPreset.html">PRESET</a></li>
                 </ul>
                 <ul class="tab-info-list">
                   <li class="tab-info-item tab-now">
