--- a/userPreset.html
+++ b/userPreset.html
@@ -35,9 +35,10 @@
                   <li class="tab-item tab-now"><a href="./now.html">NOW</a></li>
                   <li class="tab-item tab-trend"><a href="./trend.html">TREND</a></li>
                   <li class="tab-item tab-hottest"><a href="./hottest.html">HOTTEST</a></li>
+                  <li class="tab-item tab-preset now-on"><a href="./userPreset.html">PRESET</a></li>
                 </ul>
                 <ul class="tab-info-list">
-                  <li class="tab-info-item tab-now now-on">
+                  <li class="tab-info-item tab-now">
                     검색하신 키워드의 <em class="txt-highlight">관심도와 평판,</em> <em class="txt-highlight">연관 단어</em>를
                     한눈에 알아볼 수 있습니다.
                   </li>
@@ -49,6 +50,9 @@
                     검색하신 키워트에 큰 영향을 미치는 <em class="txt-highlight">카페와 인플루언서, </em><br><em class="txt-highlight">화제가 된
                       게시글</em>을 확인할 수 있습니다.
                   </li>
+                  <li class="tab-info-item tab-preset now-on">
+                    검색 설정을 통해 <em class="txt-highlight">빠르고 편리한 분석</em>을 간략하게 소개하는 문구가 삽입됩니다.
+                  </li>
                 </ul>
               </div>
             </div>
@@ -58,8 +62,7 @@
             <div class="article-inner">
               <div class="article-content">
                 <p class="tab-title">
-                  키워드 <strong class="txt-highlight">"베개"</strong>와 관련된 포스트를 <strong
-                    class="txt-num txt-highlight">30,000</strong>건 발견하였습니다.
+                  총 <strong class="txt-highlight">5가지 키워드</strong>에 대한 검색 설정이 등록되었습니다.
                 </p>
               </div>
             </div>
