--- a/now.html
+++ b/now.html
@@ -48,6 +48,9 @@
                     검색하신 키워트에 큰 영향을 미치는 <em class="txt-highlight">카페와 인플루언서, </em><br><em class="txt-highlight">화제가 된
                       게시글</em>을 확인할 수 있습니다.
                   </li>
+                  <li class="tab-info-item tab-preset">
+                    검색 설정을 통해 <em class="txt-highlight">빠르고 편리한 분석</em>을 간략하게 소개하는 문구가 삽입됩니다.
+                  </li>
                 </ul>
               </div>
             </div>
