--- a/userPreset.html
+++ b/userPreset.html
@@ -19,6 +19,8 @@
 
 <body>
   <div id="wrap" class="user-page usePreset-page">
+    <div id="dummy-btn-userpreset_sub" style="position:absolute;top:100px;left:20px;font-size:18px;font-weight:700;"><a
+        href="./userPreset_sub.html">넘어가기</a></div>
     <!-- <div id="headerNav" class="contents-page"> -->
     <div id="header" class="contents-page">
 
