--- a/footer.html
+++ b/footer.html
@@ -397,9 +397,99 @@
 
     <div id="srchSetModal" class="modal-section">
       <div class="modalBg"></div>
-      <div class="search-setting-wrap">
-        <div class="search-setting-inner">
-          검색 설정 모달
+      <div class="modal-wrap search-preset-modal">
+        <div class="modal-inner search-preset-inner">
+          <div class="modal-top search-preset-top clearFix">
+            <h2 class="modal-title search-preset-title">검색설정 가져오기</h2>
+
+            <div id="clsSrchSet" class="modal-cls-btn">
+              <button class="cls-btn">X</button>
+            </div>
+          </div>
+
+          <div class="modal-content-wrap preset-content-wrap">
+            <div class="modal-content-inner preset-content-inner">
+              <div class="preset-kwrd-wrap">
+                <div class="preset-kywrd-list">
+                  <li class="preset-kywrd-item">
+                    <span class="item-kywrd">베개</span>
+                    <span class="item-date"><em>2022.05.10 09:28</em></span>
+                  </li>
+                  <li class="preset-kywrd-item">
+                    <span class="item-kywrd">아이폰</span>
+                    <span class="item-date"><em>2022.05.03 15:03</em></span>
+                  </li>
+                  <li class="preset-kywrd-item">
+                    <span class="item-kywrd">신한은행</span>
+                    <span class="item-date"><em>2022.05.03 17:41</em></span>
+                  </li>
+                  <li class="preset-kywrd-item">
+                    <span class="item-kywrd">잇섭</span>
+                    <span class="item-date"><em>2022.05.01 09:57</em></span>
+                  </li>
+                </div>
+              </div>
+
+              <div class="preset-wrap">
+                <ul class="preset-list">
+                  <li class="preset-item">
+                    <div class="set-btn-wrap">
+                      <p class="set-btn search-btn"><span>검색하기</span></p>
+                    </div>
+
+                    <ul class="preset-info-wrap">
+                      <li class="preset-info-item info-preset-word">
+                        <div class="info-item-title">검색어</div>
+                        <div class="info-item-sub">
+                          <div class="info-sub-wrap">
+                            <p class="info-sub-word info-preset-word">잇섭</p>
+                          </div>
+                        </div>
+                      </li>
+
+                      <li class="preset-info-item preset-optional-word .preset-include-word">
+                        <div class="info-item-title">포함어</div>
+                        <div class="info-item-sub">
+                          <div class="info-sub-wrap">
+                            <p class="info-sub-word info-include-word">스위치</p>
+                            <p class="info-sub-word info-include-word">스팀덱</p>
+                            <p class="info-sub-word info-include-word">황용섭</p>
+                          </div>
+                        </div>
+                      </li>
+
+                      <li class="preset-info-item preset-optional-word .preset-exclude-word">
+                        <div class="info-item-title">제외어</div>
+                        <div class="info-item-sub">
+                          <div class="info-sub-wrap">
+                            <p class="info-sub-word info-exclude-word">컬러스케일</p>
+                            <p class="info-sub-word info-exclude-word">언더케이지</p>
+                          </div>
+                        </div>
+                      </li>
+
+                      <li class="preset-info-item preset-period">
+                        <div class="info-item-title">검색기간</div>
+                        <div class="info-item-sub">
+                          <div class="info-sub-wrap info-date-wrap date-start">
+                            <p class="date-title">시작일</p>
+                            <div class="date-info">
+                              <span>2022-05-10 13:05</span>
+                              <em>저장됨</em>
+                            </div>
+                          </div>
+
+                          <div class="info-sub-wrap info-date-wrap date-end">
+
+                          </div>
+                        </div>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
